bridge/base/api-deployment.yaml
#! api-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: api
    namespace: mini-council
    labels:
        com.docker.compose.project: mini-council
        com.docker.compose.service: api
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: mini-council
            com.docker.compose.service: api
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: mini-council
                com.docker.compose.service: api
                com.docker.compose.network.default: "true"
        spec:
            restartPolicy: unless-stopped
            containers:
                - name: api
                  image: mini-council-api
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: api-8080
                      containerPort: 8080
                  volumeMounts:
                    - name: data
                      mountPath: /data
            volumes:
                - name: data
                  persistentVolumeClaim:
                    claimName: api-app-data
