bridge/base/api-service.yaml
# check if there is at least one published port

#! api-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: api-published
    namespace: mini-council
    labels:
        com.docker.compose.project: mini-council
        com.docker.compose.service: api
spec:
    selector:
        com.docker.compose.project: mini-council
        com.docker.compose.service: api
    ports:
        - name: api-8080
          port: 8080
          protocol: TCP
          targetPort: api-8080

# check if there is at least one published port
