bridge/base/model-expose.yaml
#! model-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: model
    namespace: mini-council
    labels:
        com.docker.compose.project: mini-council
        com.docker.compose.service: model
spec:
    selector:
        com.docker.compose.project: mini-council
        com.docker.compose.service: model
    ports:
        - name: model-8000
          port: 8000
          targetPort: model-8000
