bridge/base/model-service.yaml
#! model-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: model-published
    namespace: mini-council
    labels:
        com.docker.compose.project: mini-council
        com.docker.compose.service: model
spec:
    selector:
        com.docker.compose.project: mini-council
        com.docker.compose.service: model
    ports:
        - name: model-8000
          port: 8000
          protocol: TCP
          targetPort: model-8000
